# partbooter

./: Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/helper/: Cargo.toml
apps/helper/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  json.rs  lib.rs  model.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  service.rs
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs
crates/payloads/linux-iso/: Cargo.toml
crates/payloads/linux-iso/src/: lib.rs
crates/payloads/winpe/: Cargo.toml
crates/payloads/winpe/src/: lib.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs
docs/architecture/: adr-001-language-and-runtime.md  adr-002-privilege-separation.md  boot-flow.md  system.md
docs/operations/: recovery.md
docs/product/: vision.md
docs/roadmap/: v1.md
docs/security/: threat-model.md
docs/testing/: strategy.md
